--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "explorations-phaser"]
 	path = explorations-phaser
-	url = git@github.com:tmjoseantonio/explorations-phaser.git
+	url = https://github.com/tmjoseantonio/explorations-phaser.git
