--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
-  "name": "ventas-jose",
+  "name": "tmjoseantonio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://myusername.github.io",
   "dependencies": {
+    "gh-pages": "^2.1.1",
+    "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-ga": "^2.7.0",
+    "react-helmet": "^5.2.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
   "scripts": {
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -27,5 +35,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
