--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "Jose Tovar - Web Engineer",
+  "short_name": "Jose Tovar - Lead Engineer",
   "name": "Jose's Website",
   "icons": [
     {
